rewrite to use var, instanceof with type test pattern, switch expression and record