@@ -3,18 +3,16 @@ package effectivejava.chapter7.item45.anagrams;
 import java.io.IOException;
 import java.nio.file.Files;
 import java.nio.file.Path;
-import java.nio.file.Paths;
-import java.util.stream.Stream;
 
 import static java.util.stream.Collectors.groupingBy;
 
 // Overuse of streams - don't do this! (page 205)
 public class StreamAnagrams {
     public static void main(String[] args) throws IOException {
-        Path dictionary = Paths.get(args[0]);
-        int minGroupSize = Integer.parseInt(args[1]);
+        var dictionary = Path.of(args[0]);
+        var minGroupSize = Integer.parseInt(args[1]);
 
-        try (Stream<String> words = Files.lines(dictionary)) {
+        try (var words = Files.lines(dictionary)) {
             words.collect(
                     groupingBy(word -> word.chars().sorted()
                             .collect(StringBuilder::new,
